Created basic structure and layout of the site

--- a/index.html
+++ b/index.html
@@ -11,6 +11,32 @@
 <body>
     <header></header>
     <h1>Rock Paper Scissors</h1>
+    <section>
+        <p>You v.s. The Computer</p>
+        <p>Your Score: 0</p>
+        <p>The Computer's score: 0</p>
+    </section>
+
+    <section>
+        <h4>Make your choice:</h4>
+        <img src="" alt="">
+        <button>Rock</button>
+        <button>Paper</button>
+        <button>Scissors</button>
+    </section>
+
+    <section>
+        <h4>The computer chose: </h4>
+        <img src="" alt="">
+
+    </section>
+
+    <section>
+        <p>Result: </p>
+        <p>numbers updating</p>
+        <p>Current Score: </p>
+        <button>Play Again</button>
+    </section>
 
 </body>
 </html>
