Added emojis and images

--- a/index.html
+++ b/index.html
@@ -19,15 +19,16 @@
 
     <section>
         <h4>Make your choice:</h4>
-        <img src="" alt="">
-        <button>Rock</button>
-        <button>Paper</button>
-        <button>Scissors</button>
+        <img src="./resources/right-facing_fist.png" alt="">
+        <br>
+        <button>Rock 🤜</button>
+        <button>Paper ✋</button>
+        <button>Scissors ✌️</button>
     </section>
 
     <section>
         <h4>The computer chose: </h4>
-        <img src="" alt="">
+        <img src="./resources/raised_hand_with_fingers_splayed.png" alt="">
 
     </section>
 
