Changed player img tag id to 'playerChoice'

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <section id="Player">
         <h4>Make your choice:</h4>
-        <img id="yourChoice" src="./resources/question_black.png" alt="">
+        <img id="playerChoice" src="./resources/question_black.png" alt="">
         <br>
         <button id="Rock">Rock 🤜</button>
         <button id="Paper">Paper ✋</button>
