Implemented onclick image change for all choices

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <section id="Player">
         <h4>Make your choice:</h4>
-        <img id="playerChoice" src="./resources/question_black.png" alt="">
+        <img id="playerChoice" src="./resources/question_black.png" alt="question mark">
         <br>
         <button id="Rock">Rock 🤜</button>
         <button id="Paper">Paper ✋</button>
@@ -27,7 +27,7 @@
 
     <section id="Computer">
         <h4>The computer chose: </h4>
-        <img id="computerChoice" src="./resources/question_black.png" alt="">
+        <img id="computerChoice" src="./resources/question_black.png" alt="question">
 
     </section>
 
