Added id tags to the Results section

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
     </section>
 
-    <section>
-        <p>Result: </p>
-        <p>numbers updating</p>
-        <p>Current Score: </p>
+    <section id="Results">
+        <h4>Result:</h4>
+        <p id="result">...</p>
+        <p id="currentScore">Current Score: </p>
         <button id="playAgain">Play Again</button>
     </section>
 
