Added span tags to update the score through JS

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h1>Rock Paper Scissors</h1>
     <section id="scoreboard">
         <p>You v.s. The Computer</p>
-        <p id="playerScore">Your Score: 0</p>
-        <p id="computerScore">The Computer's score: 0</p>
+        <p>Your Score: <span id="playerScore">0</span></p>
+        <p>The Computer's score: <span id="computerScore">0</span></p>
     </section>
 
     <section id="Player">
