Repositioned player & computer sections using a div

--- a/index.html
+++ b/index.html
@@ -16,22 +16,25 @@
         <p>The Computer's score: <span id="computerScore">0</span></p>
     </section>
 
-    <section id="Player">
-        <h4>Make your choice:</h4>
-        <img id="playerChoice" src="./resources/question_black.png" alt="question mark">
-        <br>
-        <button id="Rock">Rock 🤜</button>
-        <button id="Paper">Paper ✋</button>
-        <button id="Scissors">Scissors ✌️</button>
-    </section>
+    <div id="gameScreen">
+        <section id="Player">
+            <h4>Make your choice:</h4>
+            <img id="playerChoice" src="./resources/question_black.png" alt="question mark">
+            <br>
+            <br>
+            <button id="Rock">Rock 🤜</button>
+            <button id="Paper">Paper ✋</button>
+            <button id="Scissors">Scissors ✌️</button>
+        </section>
 
-    <section id="Computer">
-        <h4>The computer chose: </h4>
-        <img id="computerChoice" src="./resources/question_black.png" alt="question">
+        <section id="Computer">
+            <h4>The computer chose: </h4>
+            <img id="computerChoice" src="./resources/question_black.png" alt="question">
 
-    </section>
+        </section>
+    </div>
 
-    <section id="Results">
+        <section id="Results">
         <h4>Result:</h4>
         <p id="result">...</p>
         <p id="currentScore">Current Score: </p>
