Styled buttons, centered the subtitle

--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
 </head>
 
 <body>
-    <header></header>
-    <h1>Rock Paper Scissors</h1>
+    <header>
+        <h1>Rock Paper Scissors</h1>
+    </header>
+        <p id="subtitle">You v.s. The Computer</p>
     <section id="scoreboard">
-        <p>You v.s. The Computer</p>
+        
         <p>Your Score: <span id="playerScore">0</span></p>
         <p>The Computer's score: <span id="computerScore">0</span></p>
     </section>
 
     <div id="gameScreen">
+        
         <section id="Player">
             <h4>Make your choice:</h4>
             <img id="playerChoice" src="./resources/question_black.png" alt="question mark">
@@ -34,7 +37,7 @@
         </section>
     </div>
 
-        <section id="Results">
+    <section id="Results">
         <h4>Result:</h4>
         <p id="result">...</p>
         <p id="currentScore">Current Score: </p>
