Added ids for draws and games played

--- a/index.html
+++ b/index.html
@@ -36,12 +36,17 @@
 
         </section>
     </div>
-
+    <br>
+    <br>
     <section id="Results">
         <h4>Result:</h4>
-        <p id="result">...</p>
-        <p id="currentScore">Current Score: </p>
-        <button id="playAgain">Play Again</button>
+        <p id="matchResult">...</p>
+        <section id="Record">
+            <p id="numOfGames">Games played: </p>
+            <p id="numofDraws">Draws: </p>
+            <p id="currentScore">Current Score: </p>
+            <button id="playAgain">Play Again</button>
+        </section>  
     </section>
 
 </body>
